Mungo 1.801 -- 08/12/2013

	Fixed tests.

Mungo 1.8 -- 05/12/2013

	Updated POD.

	Not modified response now gives the correct HTTP message.

	No need for action list any more!

	Updated dependencies.
	
	Removed etag support as was not working the way i wanted it to.
	
	Now outputting 404 errors when an action sub is now found.

	500 error now has the correct HTTP message.

	Now outputting any error given to the view template to the logs.

	Now gets template files from relative path of the server document root.
	
	Fixed redirect status code.
	
	getThisUrl() now works when running servers not on port 80.

	Sessions now working with servers running on a non standard port.
	
	SimpleTemplate class removed.
	
	Reverted back to using CGI for form input as CGI::Minimal does not handle large files well.
	
	Now using secure cookies if needed.
	
	Using httponly cookies for session.
 
Mungo 1.701 -- 27/04/2013

	Updated change log.

Mungo 1.7 -- 27/04/2013

	Fixed bug in template toolkit response class.
	
	Search engine friendly URLs are now supported.
	
	Template toolkit templates are now in UTF8.
	
	Correct HTTP error code sent when errors occur.
	
	getThisUrl() no longer matches the query string.
	
	Switched to CGI::Minimal.
	
	Now expiring sessions when the session object is destroyed.
	
	Template toolkit view now has full access to Mungo object.
	
	getHeader() method added to request class.
	
	More logging only sent when in debug mode.
	
	ETag headers now sent.
	
	Not modified response class to quickly return when no change in content.
		
Mungo 1.6 -- 11/04/2012

	Current action is now accessible from template toolkit response template automatically.
	
	Session and request classes can now be overridden via config.
	
	Session now created automatically if a invalid one is found.
	
	Session save path now moved to single class variable that can be overridden.
	
	Relaxed include regex in simple template response class.
	