@@ -12,10 +12,7 @@ lib/CGI/Mungo/Response/Raw.pm
 lib/CGI/Mungo/Response/TemplateToolkit.pm
 lib/CGI/Mungo/Session.pm
 lib/CGI/Mungo/Utils.pm
-Makefile.PL
 MANIFEST			This list of files
-META.json
-META.yml
 README
 root/templates/genericerror.html
 script/example_cgi_apps/hello_world.cgi
@@ -25,3 +22,6 @@ t/00_use.t
 t/01_mungo.t
 t/02_response_raw.t
 t/03_pod.t
+Makefile.PL
+META.yml
+META.json
