@@ -10,7 +10,7 @@ build_requires:
 configure_requires:
   Module::Build: 0.40
 dynamic_config: 1
-generated_by: 'Module::Build version 0.4007, CPAN::Meta::Converter version 2.132140'
+generated_by: 'Module::Build version 0.4007, CPAN::Meta::Converter version 2.132830'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -19,7 +19,7 @@ name: CGI-Mungo
 provides:
   CGI::Mungo:
     file: lib/CGI/Mungo.pm
-    version: 1.801
+    version: 1.9
   CGI::Mungo::Base:
     file: lib/CGI/Mungo/Base.pm
   CGI::Mungo::Log:
@@ -52,4 +52,4 @@ requires:
   Template: 0
 resources:
   license: http://dev.perl.org/licenses/
-version: 1.801
+version: 1.9
